some ending stuff

--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -43,18 +43,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "7ce3119d",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nlet carName = \"Toyota\";\nlet carModel = 'Corolla';\nconst Grandma = `Grandma`;\nconsole.log(carName), console.log(carModel), console.log(Grandma);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "%%javascript\n",
+    "\n",
     "let carName = \"Toyota\";\n",
     "let carModel = 'Corolla';\n",
-    "const Grandma = `Grandma`;"
+    "const Grandma = `Grandma`;\n",
+    "console.log(carName), console.log(carModel), console.log(Grandma);"
    ]
   },
   {
@@ -63,9 +77,9 @@
    "metadata": {},
    "source": [
     "# Strings and Quotes\n",
-    "Strings can work with both single and double quotes, there is no difference.\n",
-    "Strings are meant to be stored in variables. \"Let\" and \"const\" are common variables that store strings.\n",
-    "Strings can also include quotes inside quotes."
+    "- Strings can work with both single and double quotes, there is no difference.\n",
+    "- Strings are meant to be stored in variables. \"Let\" and \"const\" are common variables that store strings.\n",
+    "- Strings can also include quotes inside quotes, but the quotes inside need to be different than the quotes outside."
    ]
   },
   {
@@ -79,9 +93,166 @@
    },
    "outputs": [],
    "source": [
-    "let carModel = \"Corolla\";\n",
-    "let carModel2 = 'Prius';\n",
-    "let carModel3 = '\"Rav4\"';"
+    "let button1 = \"Grandma\";\n",
+    "let button2 = '67 Cookie';\n",
+    "let button3 = '\"Mega Cookie\"';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82a07724",
+   "metadata": {},
+   "source": [
+    "# Counting Strings\n",
+    "- Strings have a unique feature of being able to count the number or characters or how long the string is\n",
+    "- Use `.length` to find the amount of characters a string has\n",
+    "- Strings count the amount of spaces inside too\n",
+    "- Strings can have 0 characters in them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "6918b6ca",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nlet multiplier = \"x100\";\nconsole.log(multiplier.length); // Output: 4\n\nlet multiplier = \" x100 \";\nconsole.log(multiplier.length); // Output: 6 (includes spaces)\n\nlet emptyString = \"\";\nconsole.log(emptyString.length); // Output: 0\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "let multiplier = \"x100\";\n",
+    "console.log(multiplier.length); // Output: 4\n",
+    "\n",
+    "let multiplier = \" x100 \";\n",
+    "console.log(multiplier.length); // Output: 6 (includes spaces)\n",
+    "\n",
+    "let emptyString = \"\";\n",
+    "console.log(emptyString.length); // Output: 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8213d113",
+   "metadata": {},
+   "source": [
+    "# Simple Text Modifications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f848b24",
+   "metadata": {},
+   "source": [
+    "Strings can undergo some simple text modifications, including:\n",
+    "- Upper case\n",
+    "- Lower case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f9a50e9",
+   "metadata": {},
+   "source": [
+    "## Examples of Modifications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "f9e0f876",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nlet name = \"Cookie\";\nconsole.log(name.toUpperCase()); // \"COOKIE\"\nconsole.log(name.toLowerCase()); // \"cookie\"\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "let name = \"Cookie\";\n",
+    "console.log(name.toUpperCase()); // \"COOKIE\"\n",
+    "console.log(name.toLowerCase()); // \"cookie\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b800c0",
+   "metadata": {},
+   "source": [
+    "# Concatenation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c989cfc7",
+   "metadata": {},
+   "source": [
+    "Strings in JavaScript can ba **concatenated**, which when printed in the console log, are added together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "56deb5a9",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "// Concatenation\nlet cookieName = \"Chocolate Chip Cookie\";\nlet firstName = \"LeBron\";\nlet lastName = \"James\";\nconsole.log(firstName + \" \" + lastName + \"' favorite cookie is his signature \" + cookieName + \".\"); // \"Lebron James' favorite cookie is his signature Chocolate Chip Cookie.\"\"\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "// Concatenation\n",
+    "let cookieName = \"Chocolate Chip Cookie\";\n",
+    "let firstName = \"LeBron\";\n",
+    "let lastName = \"James\";\n",
+    "console.log(firstName + \" \" + lastName + \"' favorite cookie is his signature \" + cookieName + \".\"); // \"Lebron James' favorite cookie is his signature Chocolate Chip Cookie.\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3d69e92",
+   "metadata": {},
+   "source": [
+    "Concatenation makes combining strings into sentences possible. However, concatenation can be made simpler, as it can sometimes seem very cluttered when there are multple strings needed to be combined. It is easy to lose track of quotes and addition signs.\n",
+    "\n",
+    "How can we make concatenation more simpler? The answer is in template literals."
    ]
   },
   {
@@ -97,12 +268,13 @@
    "id": "0c876db9",
    "metadata": {},
    "source": [
-    "# What are template literals?\n",
+    "## What are template literals?\n",
     "- Template literals are enclosed by backticks (``)\n",
     "- Template literals and strings have three different functions:\n",
     "    - 1. Can create multi-line strings\n",
+    "        - Strings can be written across multiple lines\n",
     "    - 2. String interpolation\n",
-    "    - 3. Tagged Templates\n"
+    "        - Concatenation made simpler, less addition signs in place of a syntax"
    ]
   },
   {
@@ -154,14 +326,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "503299dc",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '🍪' (U+1F36A) (586428444.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[78]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mshopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;\u001b[39m\n                                                                                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '🍪' (U+1F36A)\n"
+     ]
+    }
+   ],
    "source": [
     "shopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\n",
     "shopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;"
@@ -173,7 +354,7 @@
    "metadata": {},
    "source": [
     "This is a great example of **string interpolation** in the Cookie Clicker Game. \n",
-    "- It uses the syntax: ${}for the variables emoji, name, and price to be plugged. Template literals allow for variables to be placed inside the string.\n",
+    "- It uses the syntax: `${expression}` for the variables emoji, name, and price to be plugged. Template literals allow for variables to be placed inside the string.\n",
     "- The className button doesn't need to have the backtick, but provides clarity and consistency."
    ]
   },
@@ -182,7 +363,7 @@
    "id": "18967c61",
    "metadata": {},
    "source": [
-    "# Variables in Cookie CLicker Game"
+    "# Strings in Cookie Clicker Game"
    ]
   },
   {
@@ -230,28 +411,16 @@
     }
    },
    "source": [
-    "In this example, there are **eight** examples of strings: \"Grandma\", \"Chef\", and \"Kitchen\". All three examples are under the variable: \"const\".\n",
-    "The other **three** examples, \"👵\", \"👨‍🍳\", and \"🔪\", are examples of strings as emojis. \n",
-    "The final **two** examples of strings use the backtick quotes: \n",
-    "`bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`\n",
-    "and\n",
-    "`${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`\n",
-    "that store data of the const: shopButton."
+    "In this example, there are **six** examples of strings.\n",
+    "- \"Grandma\", \"Chef\", and \"Kitchen\" are **three** examples are under the variable: \"const\".\n",
+    "- Another **three** examples, \"👵\", \"👨‍🍳\", and \"🔪\", are examples of strings as emojis. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0ce4ef1e",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "# Counting Strings\n",
-    "- Strings have a unique feature of being able to count the number or characters or how long the string is\n",
-    "- Use \n"
-   ]
+   "id": "810a0120",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
