--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -28,9 +28,14 @@
     }
    },
    "source": [
-    "# Javascript Strings\n",
+    "<hr>\n",
+    "\n",
+    "# JavaScript Strings\n",
+    "\n",
     "## What are strings?\n",
-    "Strings are a data type used to represent text and store them within quotes. They are sequences of characters enclosed in single quotes (' '), double quotes (\" \"), or backticks (` `). Strings can contain letters, numbers, symbols, and spaces."
+    "Strings are a data type used to represent text and store them within quotes. They are sequences of characters enclosed in single quotes `' '`, double quotes `\" \"`, or backticks (`). Strings can contain letters, numbers, symbols, and spaces.\n",
+    "\n",
+    "<hr>"
    ]
   },
   {
@@ -73,9 +78,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "429bb7be",
+   "metadata": {},
+   "source": [
+    "Strings contain information about variables that are defined using `let` or `const`. To print these strings, using `console.log()` will print the strings in the console."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2749af54",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "# Strings and Quotes\n",
     "- Strings can work with both single and double quotes, there is no difference.\n",
     "- Strings are meant to be stored in variables. \"Let\" and \"const\" are common variables that store strings.\n",
@@ -103,6 +118,8 @@
    "id": "82a07724",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "# Counting Strings\n",
     "- Strings have a unique feature of being able to count the number or characters or how long the string is\n",
     "- Use `.length` to find the amount of characters a string has\n",
@@ -149,6 +166,8 @@
    "id": "8213d113",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "# Simple Text Modifications"
    ]
   },
@@ -159,7 +178,9 @@
    "source": [
     "Strings can undergo some simple text modifications, including:\n",
     "- Upper case\n",
-    "- Lower case"
+    "- Lower case\n",
+    "\n",
+    "Using `.toUpperCase` or `.toLowerCase` alongside the `console.log` can print the following strings in the console with modified text. "
    ]
   },
   {
@@ -204,6 +225,8 @@
    "id": "b9b800c0",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "# Concatenation"
    ]
   },
@@ -212,7 +235,9 @@
    "id": "c989cfc7",
    "metadata": {},
    "source": [
-    "Strings in JavaScript can ba **concatenated**, which when printed in the console log, are added together."
+    "Strings in JavaScript can ba **concatenated**, which when printed in the console log, are added together.\n",
+    "\n",
+    "Concatenation makes it easy to form sentences from the defined variables with strings. A mix of strings and variables defined wtih strings can make simple sentences in the console. "
    ]
   },
   {
@@ -260,6 +285,8 @@
    "id": "4fe50b99",
    "metadata": {},
    "source": [
+    "<hr>\n",
+    "\n",
     "# Strings and Template Literals"
    ]
   },
@@ -326,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "id": "503299dc",
    "metadata": {
     "vscode": {
@@ -335,15 +362,19 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '🍪' (U+1F36A) (586428444.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[78]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mshopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;\u001b[39m\n                                                                                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '🍪' (U+1F36A)\n"
-     ]
+     "data": {
+      "application/javascript": "\nshopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\nshopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%javascript\n",
+    "\n",
     "shopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\n",
     "shopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;"
    ]
