--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -48,19 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "7ce3119d",
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nlet carName = \"Toyota\";\nlet carModel = 'Corolla';\nconst Grandma = `Grandma`;\nconsole.log(carName), console.log(carModel), console.log(Grandma);\n",
+      "text/html": [
+       "<div id=\"demo\"></div>\n",
+       "\n",
+       "<script>\n",
+       "    (() => {\n",
+       "        let carName = \"Toyota\";\n",
+       "        let carModel = 'Corolla';\n",
+       "        const Grandma = `Grandma`;\n",
+       "        console.log(carName), console.log(carModel), console.log(Grandma);\n",
+       "        document.getElementById(\"demo\").innerText = carName + \" \" + carModel + \" and \" + Grandma;\n",
+       "    })();\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -68,12 +80,20 @@
     }
    ],
    "source": [
-    "%%javascript\n",
+    "%%html\n",
+    "<div id=\"demo\"></div>\n",
     "\n",
-    "let carName = \"Toyota\";\n",
-    "let carModel = 'Corolla';\n",
-    "const Grandma = `Grandma`;\n",
-    "console.log(carName), console.log(carModel), console.log(Grandma);"
+    "<script>\n",
+    "    (() => {\n",
+    "\n",
+    "        let carName = \"Toyota\";\n",
+    "        let carModel = 'Corolla';\n",
+    "        const Grandma = `Grandma`;\n",
+    "        console.log(carName), console.log(carModel), console.log(Grandma);\n",
+    "        document.getElementById(\"demo\").innerText = carName + \" \" + carModel + \" and \" + Grandma;\n",
+    "        \n",
+    "    })();\n",
+    "</script>"
    ]
   },
   {
@@ -129,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "6918b6ca",
    "metadata": {
     "vscode": {
@@ -139,9 +159,29 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nlet multiplier = \"x100\";\nconsole.log(multiplier.length); // Output: 4\n\nlet multiplier = \" x100 \";\nconsole.log(multiplier.length); // Output: 6 (includes spaces)\n\nlet emptyString = \"\";\nconsole.log(emptyString.length); // Output: 0\n",
+      "text/html": [
+       "<div id=\"demo\"></div>\n",
+       "\n",
+       "<script>\n",
+       "\n",
+       "(() => {\n",
+       "    let multiplier1 = \"x100\";\n",
+       "    console.log(multiplier1.length); // Output: 4\n",
+       "    document.getElementById(\"demo\").innerText = \"Length of '\" + multiplier1 + \"' is: \" + multiplier1.length;\n",
+       "\n",
+       "    let multiplier2 = \" x100 \";\n",
+       "    console.log(multiplier2.length); // Output: 6 (includes spaces)\n",
+       "    document.getElementById(\"demo\").innerText += \"\\nLength of '\" + multiplier2 + \"' is: \" + multiplier2.length;\n",
+       "\n",
+       "    let emptyString = \"\";\n",
+       "    console.log(emptyString.length); // Output: 0\n",
+       "    document.getElementById(\"demo\").innerText += \"\\nLength of empty string is: \" + emptyString.length;\n",
+       "})();\n",
+       "\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -151,11 +191,11 @@
    "source": [
     "%%javascript\n",
     "\n",
-    "let multiplier = \"x100\";\n",
-    "console.log(multiplier.length); // Output: 4\n",
+    "let multiplier1 = \"x100\";\n",
+    "console.log(multiplier1.length); // Output: 4\n",
     "\n",
-    "let multiplier = \" x100 \";\n",
-    "console.log(multiplier.length); // Output: 6 (includes spaces)\n",
+    "let multiplier2 = \" x100 \";\n",
+    "console.log(multiplier2.length); // Output: 6 (includes spaces)\n",
     "\n",
     "let emptyString = \"\";\n",
     "console.log(emptyString.length); // Output: 0"
@@ -193,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "f9e0f876",
    "metadata": {
     "vscode": {
@@ -242,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "56deb5a9",
    "metadata": {
     "vscode": {
@@ -297,7 +337,7 @@
    "source": [
     "## What are template literals?\n",
     "- Template literals are enclosed by backticks (``)\n",
-    "- Template literals and strings have three different functions:\n",
+    "- Template literals (introduced in ES6) have many new features added to strings. 2 of them are:\n",
     "    - 1. Can create multi-line strings\n",
     "        - Strings can be written across multiple lines\n",
     "    - 2. String interpolation\n",
@@ -314,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "eef28891",
    "metadata": {
     "vscode": {
@@ -353,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "503299dc",
    "metadata": {
     "vscode": {
@@ -375,8 +415,8 @@
    "source": [
     "%%javascript\n",
     "\n",
-    "shopButton.className = `bg-slate-500 hover:bg-slate-600 text-white px-4 py-2 mb-2`;\n",
-    "shopButton.innerHTML = `${forSaleItemInfo.emoji} ${forSaleItemInfo.name} (${forSaleItemInfo.price} 🍪)`;"
+    "const name = \"Lance\";\n",
+    "console.log(`Hello, ${name}!`);"
    ]
   },
   {
