--- a/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods/2025-10-8-Makers-Classes-constructors-HW.ipynb
@@ -183,6 +183,14 @@
     "  }\n",
     "}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0180a89f",
+   "metadata": {},
+   "source": [
+    "This is where you will find homework: [Github Homework Link](https://github.com/Open-Coding-Society/pages/tree/main/_notebooks/CSSE/JavaScriptLessons/Classes_and_Methods)"
+   ]
   }
  ],
  "metadata": {
