--- a/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
+++ b/_notebooks/CSSE/JavaScriptLessons/Strings/2025-10-8-Strings-makers-cookieclicker-lesson.ipynb
@@ -491,7 +491,9 @@
    "cell_type": "markdown",
    "id": "810a0120",
    "metadata": {},
-   "source": []
+   "source": [
+    "This is where you will find homework: [Github Homework Link](https://github.com/Open-Coding-Society/pages/tree/main/_notebooks/CSSE/JavaScriptLessons/Strings)"
+   ]
   }
  ],
  "metadata": {
